--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Fab Lab Nürnberg GitHub Page</h1>
 		<ul>
-			<li><a href="/Umzug">Umzug</a></li>
+			<li><a href="/homepage-nikola">Entwurf Neue Homepage</a></li>
 		</ul>
 	</body>
 </html>
