--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<h1>Fab Lab Nürnberg GitHub Page</h1>
 		<ul>
 			<li><a href="/homepage-nikola">Entwurf Neue Homepage</a></li>
+			
+			<li><a href="/asciidoc-pages">Spickzettel asciiDOC (Midi Ausführung)</a><small>Alles was Max über asciidoc weiss ...</small></li>
 		</ul>
 	</body>
 </html>
