--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		<h1>Fab Lab Nürnberg GitHub Page</h1>
 		<ul>
-			<li><a href="/asciidoc-pages">Spickzettel asciiDOC (Midi Ausführung)</a> <small>Alles was Max über asciidoc weiss ...</small></li><br><p>
+			<li><a href="/asciidoc-pages/asciidoc-anleitung.html">Spickzettel asciiDOC (Midi Ausführung)</a> <small>Alles was Max über asciidoc weiss ...</small></li><br><p>
 			
 			<li><a href="/homepage-nikola">Entwurf Neue Homepage</a></li><br><p>
 	
