--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<ul>
 			<li><a href="/asciidoc-pages/asciidoc-anleitung.html">Spickzettel asciiDOC (Midi Ausführung)</a> <small>Alles was Max über asciidoc weiss ...</small></li><br><p>
 			
+			<li><a href="/VisiCut/releases/latest">Aktuelles VisiCut 1.9-200-jw mit Ruida support</a></li><br><p>
+
 			<li><a href="/homepage-nikola">Entwurf Neue Homepage</a></li><br><p>
 	
 		</ul>
